--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
-Flask==2.2.2
-gunicorn
-Werkzeug==2.2.2
+blinker==1.9.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+Flask==3.1.0
+greenlet==3.1.1
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+numpy==2.1.3
+oauthlib==3.2.2
+packaging==24.2
+pandas==2.2.3
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+six==1.16.0
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+Werkzeug==3.1.3
+
